--- a/gatechecks.yaml
+++ b/gatechecks.yaml
@@ -9,6 +9,8 @@ binaries:
                   \.otf,\.ico]
   releng:
     binary_ignore: [nullvalue]
+  sandbox:
+    binary_ignore: [nullvalue]
 
 file_audits:
   file_names: [\.gpg$,\.key$,\.asc$,\.sig$,\.md5,aws_access_key_id,aws_secret_access_key,id_rsa]
@@ -30,6 +32,9 @@ file_audits:
                      wget --directory-prefix=(.*)SNAP_CACHE(.*)snap_url(.*),sudo yum -y install wget,cacheValues,isInfiniteValue,
                      wget(.*)WORKSPACE/opnfv\.properties(.*)GS_URL(.*)properties,wget > /dev/null,fileValidationError,eval_collection,
                      eval_db,if \(name === 'evals'\),evaluate,value,ast\.literal_eva,_eval_pods_db,new = eval\(obj\)]
+  sandbox:
+    file_names: [nullvalue]
+    file_contents: [nullvalue]
 
 licence:
   licence_ext: ['.rst','.md','.py','.sh','.java','.rb']
