Fix log directory issues
1. /home/opnfv can not be created in osx
2. when the log directory is not existed, anteater_logger.py will fail
3. add new added directory .reports into .gitignore

Change-Id: If3833bfbaf160d35afab1c71d3fab060a1164da6
Signed-off-by: Julien <zhang.jun3g@zte.com.cn>

--- a/anteater.conf
+++ b/anteater.conf
@@ -1,4 +1,4 @@
 [config]
-reports_dir = /home/opnfv/reports/
-anteater_log = /home/opnfv/anteater.log
-gate_checks = /home/opnfv/anteater/gatechecks.yaml
+reports_dir =  .reports/
+anteater_log = .reports/anteater.log
+gate_checks =  ./gatechecks.yaml
