Move project's exception file to subdir
add subdir **exceptions** for project's specific exception config files

Change-Id: I57b7972706dd2e2168099e9815a0cfc3e8a33b67
Signed-off-by: Julien <zhang.jun3g@zte.com.cn>

--- a/gatechecks.yaml
+++ b/gatechecks.yaml
@@ -69,6 +69,6 @@ licence:
     - '__init__.py'
 
 project_config:
-  - releng: releng_exception.yaml
-  - sandbox: sandbox_exception.yaml
-  - testproj: sandbox_exception.yaml
+  - releng: exceptions/releng_exception.yaml
+  - sandbox: exceptions/sandbox_exception.yaml
+  - testproj: exceptions/sandbox_exception.yaml
