rename gatechecks and project_config
gatechecks is renamed to master_list and project_config is
renamed to project_exceptions

JIRA:RELENG-251

Change-Id: Icbcc2c114d687783e0720017025cb4bb8e53e8a3
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/anteater.conf
+++ b/anteater.conf
@@ -1,4 +1,4 @@
 [config]
 reports_dir =  .reports/
 anteater_log = .reports/anteater.log
-gate_checks =  ./gatechecks.yaml
+master_list =  ./master_list.yaml
