--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,10 +15,13 @@ LABEL version="0.1" description="Anteater - OPNFV Gerrit Security Gate Checks"
 
 # environment variables
 ARG BRANCH=master
+ARG ANTEATER_USER=opnfv
 
-ENV HOME /home/opnfv
+# Anteater is run as user 'opnfv'
+RUN useradd -U -m -s /bin/bash ${ANTEATER_USER}
+
+ENV HOME /home/${ANTEATER_USER}
 ENV ANT_HOME ${HOME}/anteater
-RUN mkdir -p ${ANT_HOME}
 
 # Packaged dependencies
 RUN yum -y install epel-release
@@ -26,7 +29,11 @@ RUN yum -y update
 RUN yum -y install git python-devel python-pip
 RUN yum clean all
 
+# Run all following commands and container as non-root user
+USER ${ANTEATER_USER}
+
 # Commands to clone and install
+RUN mkdir -p ${ANT_HOME}
 RUN git clone https://gerrit.opnfv.org/gerrit/releng-anteater ${ANT_HOME}
 WORKDIR ${ANT_HOME}
 RUN /usr/bin/pip install -r ${ANT_HOME}/requirements.txt
