Adds Pharos, Functest, Octopus to Anteater
This change adds exception files to anteater, to enable projects
Functest, Pharos, Octopus.

JIRA: RELENG-252

Change-Id: I1ac120ae2bdf868f9db34fe4dd30357efe61ce17
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/master_list.yaml
+++ b/master_list.yaml
@@ -64,6 +64,8 @@ licence:
     - '__init__.py'
 
 project_exceptions:
-  - releng: exceptions/releng_exception.yaml
-  - sandbox: exceptions/sandbox_exception.yaml
-  - testproj: exceptions/sandbox_exception.yaml
+  - releng:   exceptions/releng.yaml
+  - sandbox:  exceptions/sandbox.yaml
+  - pharos:   exceptions/pharos.yaml
+  - octopus:  exceptions/octopus.yaml
+  - functest: exceptions/functest.yaml
