Add wget from artifacts.opnfv.org to exceptions
JIRA: DOVETAIL-455

1. change build.opnfv.org to build\.opnfv\.org
2. add wget(.*)artifacts\.opnfv\.org

Change-Id: I62f0f0f3a145fa38ebab94b3852f196b530f945a
Signed-off-by: xudan <xudan16@huawei.com>

--- a/exceptions/releng.yaml
+++ b/exceptions/releng.yaml
@@ -60,4 +60,5 @@ file_audits:
     - wget > /dev/null
     - wget \$get_pip_url
     - wget(.*)WORKSPACE/opnfv\.properties(.*)GS_URL(.*)properties
-    - wget(.*)build.opnfv.org
+    - wget(.*)build\.opnfv\.org
+    - wget(.*)artifacts\.opnfv\.org
