Revert Dockfile changes
This change reverts back to the former Dockerfile so that anteater
jobs are capable of running again.

I don't put this forward to discard work to have it runnning as non
root, but as a stop gap to get anteater gate working again,
until an approach is finalised.

Change-Id: Ibb7d95be1a1277e398df0ea8e816b4106bda59ee
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,15 +13,11 @@ FROM centos:latest
 MAINTAINER Luke Hinds <lhinds@redhat.com>
 LABEL version="0.1" description="Anteater - OPNFV Gerrit Security Gate Checks"
 
-# environment variables
-ARG BRANCH=master
+# enviroment variables
 ARG ANTEATER_USER=opnfv
-
-# Anteater is run as user 'opnfv'
-RUN useradd -U -m -s /bin/bash ${ANTEATER_USER}
-
 ENV HOME /home/${ANTEATER_USER}
 ENV ANTEATER_HOME ${HOME}/anteater
+RUN mkdir -p ${ANTEATER_HOME}
 
 # Packaged dependencies
 RUN yum -y install epel-release
@@ -29,11 +25,7 @@ RUN yum -y update
 RUN yum -y install git python-devel python-pip
 RUN yum clean all
 
-# Run all following commands and container as non-root user
-USER ${ANTEATER_USER}
-
 # Commands to clone and install
-RUN mkdir -p ${ANTEATER_HOME}
 RUN git clone https://gerrit.opnfv.org/gerrit/releng-anteater ${ANTEATER_HOME}
 WORKDIR ${ANTEATER_HOME}
 RUN /usr/bin/pip install -r ${ANTEATER_HOME}/requirements.txt
