--- a/exceptions/functest.yaml
+++ b/exceptions/functest.yaml
@@ -11,3 +11,9 @@ file_audits:
   file_names: [nullvalue]
   file_contents:
     - ^#
+    - git clone(.*)\.openstack\.org
+    - git clone(.*)gerrit\.opnfv\.org
+    - wget(.*)build\\.opnfv\.org
+    - wget(.*)artifacts\\.opnfv\.org
+    - wget(.*)https:\/\/raw.githubusercontent\.com\/openstack\/(.*)
+    - git clone(.*)https:\/\/git.opendaylight\.org\/gerrit\/(.*)
