Allow downloading files hosted by git.openstack.org
It replaces the previous exception for the cloned repositories
(github.com/openstack).

Change-Id: I920ab7ae70c4490b53a7e988e5b0b258a12ec67f
Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>

--- a/exceptions/functest.yaml
+++ b/exceptions/functest.yaml
@@ -15,5 +15,5 @@ file_audits:
     - git clone(.*)gerrit\.opnfv\.org
     - wget(.*)build\\.opnfv\.org
     - wget(.*)artifacts\\.opnfv\.org
-    - wget(.*)https:\/\/raw.githubusercontent\.com\/openstack\/(.*)
+    - wget(.*)git\\.openstack\.org
     - git clone(.*)https:\/\/git.opendaylight\.org\/gerrit\/(.*)
