Add weekly anteater projects
July 2nd additions

https://wiki.opnfv.org/display/INF/Project+Roll+Out+for+Anteater

Change-Id: I3610868930f0d6033e528548dceb09b3279b6b8d
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/master_list.yaml
+++ b/master_list.yaml
@@ -53,8 +53,17 @@ licence:
     - '__init__.py'
 
 project_exceptions:
+  - apex: exceptions/apex.yaml
+  - armband: exceptions/armband.yaml
+  - bamboo: exceptions/bamboo.yaml
+  - barometer: exceptions/barometer.yaml
+  - bottlenecks: exceptions/bottlenecks.yaml
+  - calipso: exceptions/calipso.yaml
+  - compass4nfv: exceptions/compass4nfv.yaml
+  - conductor: exceptions/conductor.yaml
+  - copper: exceptions/copper.yaml
+  - functest: exceptions/functest.yaml
+  - octopus: exceptions/octopus.yaml
+  - pharos: exceptions/pharos.yaml
   - releng: exceptions/releng.yaml
   - sandbox: exceptions/sandbox.yaml
-  - pharos: exceptions/pharos.yaml
-  - octopus: exceptions/octopus.yaml
-  - functest: exceptions/functest.yaml
