--- a/master_list.yaml
+++ b/master_list.yaml
@@ -25,7 +25,7 @@ file_audits:
     - "git(.*?)clone"
     - "sh(.*?)curl"
     - dual_ec_drbg
-    - eval
+    - eval(.*)base64_decode
     - gost
     - md[245]
     - panama
