--- a/exceptions/compass4nfv.yaml
+++ b/exceptions/compass4nfv.yaml
@@ -18,3 +18,4 @@ file_audits:
     - wget(.*)artifacts\\.opnfv\.org
     - wget(.*)git\\.openstack\.org
     - git clone(.*)https:\/\/git.opendaylight\.org\/gerrit\/(.*)
+    - publicURL
