Fixed regex to streamline wildcards
Change-Id: I5ac55820cf53eb61d6c67c22a33d05041d9fa8b3
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/exceptions/apex.yaml
+++ b/exceptions/apex.yaml
@@ -14,9 +14,9 @@ file_audits:
     - deploy_settings.py
   file_contents:
     - ^#
-    - git clone(.*)\.openstack\.org
-    - git clone(.*)gerrit\.opnfv\.org
-    - wget(.*)build\\.opnfv\.org
-    - wget(.*)artifacts\\.opnfv\.org
-    - wget(.*)git\\.openstack\.org
-    - git clone(.*)https:\/\/git.opendaylight\.org\/gerrit\/(.*)
+    - git clone.+\.openstack\.org
+    - git clone.+gerrit\.opnfv\.org
+    - wget.+build\.opnfv\.org
+    - wget.+artifacts\.opnfv\.org
+    - wget.+git\.openstack.org
+    - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
