--- a/exceptions/availability.yaml
+++ b/exceptions/availability.yaml
@@ -12,9 +12,9 @@ file_audits:
   file_names: [nullvalue]
   file_contents:
     - ^#
-    - git clone(.*)\.openstack\.org
-    - git clone(.*)gerrit\.opnfv\.org
-    - wget(.*)build\\.opnfv\.org
-    - wget(.*)artifacts\\.opnfv\.org
-    - wget(.*)git\\.openstack\.org
-    - git clone(.*)https:\/\/git.opendaylight\.org\/gerrit\/(.*)
+    - git clone.+\.openstack\.org
+    - git clone.+gerrit\.opnfv\.org
+    - wget.+build\.opnfv\.org
+    - wget.+artifacts\.opnfv\.org
+    - wget.+git\.openstack.org
+    - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
