--- a/exceptions/pharos.yaml
+++ b/exceptions/pharos.yaml
@@ -11,3 +11,10 @@ file_audits:
   file_names: [nullvalue]
   file_contents:
     - ^#
+    - git clone.+\.openstack\.org
+    - git clone.+gerrit\.opnfv\.org
+    - wget.+build\.opnfv\.org
+    - wget.+artifacts\.opnfv\.org
+    - wget.+git\.openstack.org
+    - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
+
