Exception entry for wget
Resolves false flag in:

https://gerrit.opnfv.org/gerrit/#/c/36963/
docker/smoke/Dockerfile

Change-Id: I6bfc0a47ef662253c54fd51010c39817a23ee26c
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/exceptions/functest.yaml
+++ b/exceptions/functest.yaml
@@ -17,3 +17,4 @@ file_audits:
     - wget.+artifacts\.opnfv\.org
     - wget.+git\.openstack.org
     - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
+    - openssl-dev.libjpeg-turbo-dev.git.wget.&
