Password regex generating too much false flags
Removed 'pass' from array

Change-Id: Icd4f27f7d8c3e464fae159b5e220781d8597dbec
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/master_list.yaml
+++ b/master_list.yaml
@@ -59,7 +59,7 @@ file_audits:
 
   file_contents:
     - -----BEGIN\sRSA\sPRIVATE\sKEY----
-    - (password|passwd|pass)(.*:|.*=.*)
+    - (password|passwd)(.*:|.*=.*)
     - curl
     - git.*clone
     - dual_ec_drbg
