Exception for Curl rvm docker RUN cmd.
Change-Id: I3199ce91e4cc00f0f7bd1f5e2660cb2f9d6ae0b6
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/exceptions/functest.yaml
+++ b/exceptions/functest.yaml
@@ -18,3 +18,4 @@ file_audits:
     - wget.+git\.openstack.org
     - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
     - openssl-dev.libjpeg-turbo-dev.git.wget.&
+    - RUN.+curl.*https\:\/\/get\.rvm\.io.*bash.*stable
