Exception for curl string
Change-Id: I314d508f13ce736cb6d3d99c0b205ecc1f30abea
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/exceptions/functest.yaml
+++ b/exceptions/functest.yaml
@@ -19,3 +19,4 @@ file_audits:
     - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
     - openssl-dev.libjpeg-turbo-dev.git.wget.&
     - RUN.+curl.*https\:\/\/get\.rvm\.io.*bash.*stable
+    - grep.sed.wget.ca-certificates.git.\&&
