Compass4nfv exceptions
Change-Id: I0b29b0cb8b9f4640fe4d804e1dd3c2e31f5a7d66
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/exceptions/compass4nfv.yaml
+++ b/exceptions/compass4nfv.yaml
@@ -19,3 +19,9 @@ file_audits:
     - wget.+git\.openstack.org
     - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
     - publicURL
+    - server_password
+    - username\,.password
+    - \'password\'\:.password
+    - \'password\'\:.\{
+    - metadata_secret
+    - compass_user_password
