Add regex for all interfaces '0.0.0.0'
Listening on all interfaces can be problematic and break any
security zones or DMZ style topologies

Change-Id: Ied66dd22b668d469ddba4ee28b2999154f2005b8
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/master_list.yaml
+++ b/master_list.yaml
@@ -185,6 +185,9 @@ file_audits:
     finger:
       regex: \bfinger\b
       desc: "Avoid coms applications that transmit credentials in clear text"
+    allint:
+      regex: 0\.0\.0\.0
+      desc: "Interface listening on all addresses - may break security zones"
 
 licence:
   licence_ext:
