Add wget wildcard for git.opnfv.org
Add string - wget.+git\.opnfv.org

Change-Id: Ibcf8fa07b0539000a2a8cc2765292de4195bde0b
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/exceptions/releng.yaml
+++ b/exceptions/releng.yaml
@@ -61,4 +61,5 @@ file_audits:
     - wget \$get_pip_url
     - wget(.*)WORKSPACE/opnfv\.properties(.*)GS_URL(.*)properties
     - wget(.*)build\.opnfv\.org
+    - wget.+git\.opnfv.org
     - wget(.*)artifacts\.opnfv\.org
