--- a/exceptions/sandbox.yaml
+++ b/exceptions/sandbox.yaml
@@ -17,5 +17,6 @@ file_audits:
     - git clone.+gerrit\.opnfv\.org
     - wget.+build\.opnfv\.org
     - wget.+artifacts\.opnfv\.org
+    - wget.+git\.opnfv.org
     - wget.+git\.openstack.org
     - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
