--- a/exceptions/functest.yaml
+++ b/exceptions/functest.yaml
@@ -15,6 +15,7 @@ file_audits:
     - git clone.+gerrit\.opnfv\.org
     - wget.+build\.opnfv\.org
     - wget.+artifacts\.opnfv\.org
+    - wget.+git\.opnfv.org
     - wget.+git\.openstack.org
     - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
     - openssl-dev.libjpeg-turbo-dev.git.wget.&
