--- a/exceptions/dovetail.yaml
+++ b/exceptions/dovetail.yaml
@@ -14,8 +14,11 @@ file_audits:
     - ^#
     - git clone.+\.openstack\.org
     - git clone.+gerrit\.opnfv\.org
+    - git clone.+git\.opnfv\.org
     - wget.+build\.opnfv\.org
     - wget.+artifacts\.opnfv\.org
     - wget.+git\.opnfv.org
     - wget.+git\.openstack.org
+    - wget.+download\.cirros-cloud\.net
     - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
+    - curl.+opnfv\.org
