Implements master ignore list
This change introduces a master ignore list, to save having
to repeat ignore strings in every project exception file.

This is achieved via a new ignore_list.yaml file that is
merged with the project exception list and then used for the
re.search ignore statement in both patch_scan.py and
project_scan.py

Change-Id: Ifb60b8ba3091603182c2025dbbbfd1a88a72439b
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/anteater.conf
+++ b/anteater.conf
@@ -2,3 +2,4 @@
 reports_dir =  .reports/
 anteater_log = .reports/anteater.log
 master_list =  ./master_list.yaml
+ignore_list =  ./ignore_list.yaml
