Weekly Anteater Project Additions
https://wiki.opnfv.org/display/INF/Project+Roll+Out+for+Anteater

Week begining November the 13th

Change-Id: I240292e389b24680a37bc482fb5a8aafd3971839
Signed-off-by: lhinds <lhinds@redhat.com>

--- a/master_list.yaml
+++ b/master_list.yaml
@@ -228,3 +228,13 @@ project_exceptions:
   - releng: exceptions/releng.yaml
   - sandbox: exceptions/sandbox.yaml
   - yardstick: exceptions/yardstick.yaml
+  - infra: exceptions/infra.yaml
+  - ipv6: exceptions/ipv6.yaml
+  - joid: exceptions/joid.yaml
+  - kvmfornfv: exceptions/kvmfornfv.yaml
+  - lsoapi: exceptions/lsoapi.yaml
+  - models: exceptions/models.yaml
+  - moon: exceptions/moon.yaml
+  - multisite: exceptions/multisite.yaml
+  - netready: exceptions/netready.yaml
+
