--- a/master_list.yaml
+++ b/master_list.yaml
@@ -44,6 +44,7 @@ file_audits:
     - omniauth\.rb
     - carrierwave\.rb
     - schema\.rb
+    - knife\.rb
     - database\.yml
     - settings\.py
     - keychain
@@ -53,6 +54,25 @@ file_audits:
     - kwallet
     - aws_access_key_id
     - aws_secret_access_key
+    - otr\.private_key
+    - ovpn
+    - agilekeychain
+    - \.log
+    - gnucash
+    - backup
+    - jenkins\.plugins\.publish_over_ssh\.BapSshPublisherPlugin\.xml
+    - LocalSettings\.php
+    - tblk
+    - Favorites\.plist
+    - configuration\.user\.xpl
+    - tugboat
+    - git-credentials
+    - git-config
+    - proftpdpasswd
+    - robomongo\.json
+    - filezilla\.xml
+    - recentservers\.xml
+    - ventrilo_srv\.ini
 
   file_contents:
     private_key:
