--- a/ignore_list.yaml
+++ b/ignore_list.yaml
@@ -6,10 +6,14 @@ file_audits:
   file_names: [nullvalue]
   file_contents:
     - ^#
-    - git clone.+\.openstack\.org
-    - git clone.+gerrit\.opnfv\.org
-    - wget.+build\.opnfv\.org
-    - wget.+artifacts\.opnfv\.org
-    - wget.+git\.opnfv.org
-    - wget.+git\.openstack.org
-    - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/
+    - git clone.+\.openstack\.org\/.*
+    - git clone.+gerrit\.opnfv\.org\/.*
+    - wget.+build\.opnfv\.org\/.*
+    - wget.+artifacts\.opnfv\.org\/.*
+    - wget.+git\.opnfv.org\/.*
+    - wget.+git\.openstack.org\/.*
+    - curl.+build\.opnfv\.org\/.*
+    - curl.+artifacts\.opnfv\.org\/.*
+    - curl.+git\.opnfv.org\/.*
+    - curl.+git\.openstack.org\/.*
+    - git clone.+https:\/\/git.opendaylight\.org\/gerrit\/.*
